--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,6 @@ before_install:
 - pod install --project-directory=Example
 
 script:
-- set -o pipefail && xcodebuild test -workspace Example/SwiftyDefaults.xcworkspace -scheme SwiftyDefaults-Example -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO | xcpretty
+- xcodebuild -workspace Example/SwiftyDefaults.xcworkspace -scheme SwiftyDefaults-Example -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
+#- set -o pipefail && xcodebuild test -workspace Example/SwiftyDefaults.xcworkspace -scheme SwiftyDefaults-Example -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO | xcpretty
 - pod lib lint
