--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,5 @@ before_install:
 - pod install --project-directory=Example
 
 script:
-#- xcodebuild -workspace Example/SwiftyDefaults.xcworkspace -scheme SwiftyDefaults-Example -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
-- set -o pipefail
-- xcodebuild -workspace Example/SwiftyDefaults.xcworkspace -scheme SwiftyDefaults-Example -sdk iphonesimulator9.2 ONLY_ACTIVE_ARCH=NO | xcpretty
+- set -o pipefail &&  xcodebuild -workspace Example/SwiftyDefaults.xcworkspace -scheme SwiftyDefaults-Example -sdk iphonesimulator ONLY_ACTIVE_ARCH=YES | xcpretty
 - pod lib lint
